--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@
                 padding: 0;
                 margin: 0;
                 font-family: 'Lato', sans-serif;
-                background-color: #8f99a2;
+                color: #8f99a2;
             }
             #content {
-                max-width: 700px;
+                max-width: 824px;
                 width: 90%;
                 margin: 20px auto;
-                color: #fff;
             }
             h1, h2, h3 {
                 margin-bottom: 0;
@@ -26,41 +25,11 @@
             h1 {
                 font-size: 46px;
             }
-            img:hover {
-                opacity: 0.5;
-            }
-            a {
-                text-decoration: none;
-                line-height: 48px;
-            }
-            a > img {
-                float: left;
-            }
-            .b {
-                font-size: 20px;
-                font-weight: bold;
-                color: #fff;
-                line-height: 48px;
-                float: left;
-                margin-left: 10px;
-            }
         </style>
     </head>
     <body>
         <div id="content">
             <h1>metuet</h1>
-            <span>designer, writer, philosophically entranced
-        </div>
-        <div id="content">
-            <a href="http://twitter.com/metuet/"><img src="twitter.png"></img><span class="b">metuet</span></a> 
-            <br>
-            <br>
-            <br>
-            <a href="http://dribbble.com/metuet/"><img src="dribbble.png"></img><span class="b">metuet</span></a>
-            <br>
-            <br>
-            <br>
-            <a href="mailto:metuet@metuet.com"><img src="email.png"></img><span class="b">metuet@metuet.com</span></a>
         </div>
     </body>
 </html>
